<resources>
    <string name="app_name">Узнай Сысерть</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZmFzbW9nIiwiYSI6ImNsNjZ2dDU1NzAzYnUza280aHJwdGplcGYifQ.W5oEongEMCj5Kf0R2jrdQg</string>
    <string name="mapStyle">mapbox://styles/fasmog/cl694wo4r000914pdidaf8wsq</string>


    <string name="routes">Маршруты</string>
    <string name="map">Карта</string>
    <string name="more">Подробнее</string>
    <string name="about_rout">О маршруте</string>
    <string name="facts">Занимательные факты</string>
    <string name="fact">Занимательный факт</string>
    <string name="discover_place">Узнавай новые места</string>
    <string name="text_fish">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами. Эта парадигматическая страна, в которой жаренные члены предложения залетают прямо в рот. Даже всемогущая пунктуация не имеет власти над рыбными текстами, ведущими безорфографичный образ жизни. Однажды одна маленькая строчка рыбного текста по имени Lorem ipsum решила выйти в большой мир грамматики. Великий Оксмокс предупреждал ее о злых запятых, диких знаках вопроса и коварных точках с запятой, но текст не дал сбить себя с толку. Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу. Взобравшись на первую вершину курсивных гор, бросил он последний взгляд назад, на силуэт своего родного города Буквоград, на заголовок деревни Алфавит и на подзаголовок своего переулка Строчка. Грустный риторический вопрос скатился по его щеке и он продолжил свой путь. По дороге встретил текст рукопись. Она предупредила его: «В моей стране все переписывается по несколько раз. Единственное, что от меня осталось, это приставка «и». Возвращайся ты лучше в свою безопасную страну». Не послушавшись рукописи, наш текст продолжил свой путь. Вскоре ему повстречался коварный составитель рекламных текстов, напоивший его языком и речью и заманивший в свое агенство, которое использовало его снова и снова в своих проектах. И если его не переписали, то живет он там до сих пор.Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами. Эта парадигматическая страна, в которой жаренные члены предложения залетают прямо в рот. Даже всемогущая пунктуация не имеет власти над рыбными текстами, ведущими безорфографичный образ жизни. Однажды одна маленькая строчка рыбного текста по имени Lorem ipsum решила выйти в большой мир грамматики. Великий Оксмокс предупреждал ее о злых запятых, диких знаках вопроса и коварных точках с запятой, но текст не дал сбить себя с толку. Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу. Взобравшись на первую вершину курсивных гор, бросил он последний взгляд назад, на силуэт своего родного города Буквоград, на заголовок деревни Алфавит и на подзаголовок своего переулка Строчка. Грустный риторический вопрос скатился по его щеке и он продолжил свой путь. По дороге встретил текст рукопись. Она предупредила его: «В моей стране
    </string>
    <string name="btn_start">Вперёд</string>
    <string name="about_object">Заметка об объекте</string>
    <string name="version">Версия приложения:</string>
    <string name="contact">Связаться с командой</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_project">Это проект, создан для того, чтобы вы познакомились с городом Сысерть, который мы очень любим. Мы решили, что с помощью создания приложения внесем вклад в развитие города. Для того чтобы построить маршруты, мы выбрали самые, на наш взгляд, интересные и значимые исторические и природные места. Информация в приложении собрана так, чтобы каждый смог изучить историю нашего города самостоятельно.</string>
    <string name="name_of_gidromash_route">Гидромаш</string>
</resources>