<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.firstroute.AboutFirstRouteFragment"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/myview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="15dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_image_factory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:maxLines="1" />

                <SeekBar
                    android:id="@+id/progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/play_pause_btn"
                    android:layout_width="49dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center_horizontal"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@android:drawable/ic_media_play" />
            </LinearLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_object"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/text_fish"
                android:textAlignment="textStart" />

            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:textSize="20sp"/>

            <com.yandex.mapkit.mapview.MapView
                android:id="@+id/mapview_factory"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>